feat: 添加编辑角色接口；优化参数校验返回
